correct overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -129,7 +129,7 @@
     @apply border-border outline-ring/50;
   }
   html, body {
-    @apply h-full overflow-hidden;
+    @apply h-full;
   }
   body {
     @apply bg-background text-foreground;
